Fixing some spacings for object tags

--- a/resources/css/layout/forum/object.less
+++ b/resources/css/layout/forum/object.less
@@ -19,8 +19,12 @@
         color: @colorAttributes;
 
         .tag-object {
-            &:first-child, &:last-child {
+            &:first-child {
                 margin-left: 0;
+            }
+
+            &:last-child {
+                margin-right: 0;
             }
         }
     }
