--- a/resources/css/layout/tag/tag.less
+++ b/resources/css/layout/tag/tag.less
@@ -6,7 +6,9 @@
 
 .tag-object {
     display: inline-block;
-    margin: 0 0px;
+    margin-top: 2px;
+    margin-left: 1px;
+    margin-right: 1px;
     .no-padding;
     .round-border(5px);
     .tag-color(@darkBlue);
